# region-renderer

./: birth_region.TXT  pyproject.toml  regionTypes.json  render.py  tes3conv
src/: RegionTypes.py  generate_region_config.py
src/region_renderer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
